# platzi-curso-python-avanzado

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
mypy-report/: index.html
mypy-report/html/src/platzi_news/: __init__.py.html  config.py.html  main.py.html
mypy-report/html/src/platzi_news/analysis/: __init__.py.html  analyzer.py.html
mypy-report/html/src/platzi_news/core/: __init__.py.html  exceptions.py.html  models.py.html  services.py.html
mypy-report/html/src/platzi_news/do_not_format/: test.py.html
mypy-report/html/src/platzi_news/io/: __init__.py.html  cli.py.html  display.py.html
mypy-report/html/src/platzi_news/sources/: __init__.py.html  guardian.py.html  newsapi.py.html
src/platzi_news/: __init__.py  config.py  main.py
src/platzi_news/analysis/: analyzer.py
src/platzi_news/core/: services.py
src/platzi_news/io/: cli.py  display.py
src/platzi_news/sources/: guardian.py  newsapi.py
